<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">猫眼电影</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="movie">电影</string>
    <string name="cinema">影院</string>
	<string name="community">发现</string>
	<string name="mine">我的</string>
	<string name="all">全部</string>
	<string name="select_seat">选座</string>
	<string name="group_purchase">团购</string>
	<string name="select">筛选</string>
	<string name="login_right">立即登录</string>
	<string name="mine_default">- -</string>
	<string name="mine_tickets">我的电影票</string>
	<string name="mine_coupon">我的优惠券</string>
	<string name="message_center">消息中心</string>
	<string name="mine_movie">我的电影</string>
	<string name="mine_community">我的社区</string>
	<string name="mine_post">我的帖子</string>
	<string name="mine_collection">我的收藏</string>
	<string name="mine_goods">我购买的商品</string>
	<string name="app_set">设置</string>
	<string name="load_ready">上拉加载更多</string>
	<string name="loading">松手加载数据</string>
	<string name="loaded">完成加载数据</string>
	<string name="myorder">我的订单</string>
	<string name="querenzuowei">确认座位</string>
	<string name="querenorder">确认订单</string>
</resources>
