<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cats="http://schemas.android.com/apk/res/com.demo.cats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/fragment_mine_user_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60"
            android:background="@color/textcolor_white_a"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.cats.weights.ImageDoubleTextView
                android:id="@+id/mineTickets"
                style="@style/ImageDoubleTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                cats:imageSource="@drawable/ic_mine_my_ticket"
                cats:top_default_text="@string/mine_tickets" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="40dp"
                android:background="@color/background_bg2" />

            <com.cats.weights.ImageDoubleTextView
                android:id="@+id/mineCoupon"
                style="@style/ImageDoubleTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                cats:imageSource="@drawable/ic_mine_my_coupon"
                cats:top_default_text="@string/mine_coupon" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_bg2" />

        <com.cats.weights.MenuItemView
            android:id="@+id/messageCenter"
            style="@style/MineMenuItemStyle"
            android:layout_marginTop="@dimen/size_20"
            cats:leftFlagImg="@drawable/ic_mine_msg_center"
            cats:textString="@string/message_center"
            cats:topDevider="@color/background_bg2" />

        <com.cats.weights.MenuItemView
            android:id="@+id/mineMovie"
            style="@style/MineMenuItemStyle"
            android:layout_marginTop="@dimen/size_20"
            cats:isDeviderAlignTextLeft="true"
            cats:leftFlagImg="@drawable/ic_mine_my_movie"
            cats:textString="@string/mine_movie"
            cats:topDevider="@color/background_bg2" />

        <com.cats.weights.MenuItemView
            android:id="@+id/mineCommunity"
            style="@style/MineMenuItemStyle"
            cats:isDeviderAlignTextLeft="true"
            cats:leftFlagImg="@drawable/ic_mine_my_community"
            cats:textString="@string/mine_community" />

        <com.cats.weights.MenuItemView
            android:id="@+id/minePost"
            style="@style/MineMenuItemStyle"
            cats:isDeviderAlignTextLeft="true"
            cats:leftFlagImg="@drawable/ic_mine_my_post"
            cats:textString="@string/mine_post" />

        <com.cats.weights.MenuItemView
            android:id="@+id/mineCollection"
            style="@style/MineMenuItemStyle"
            cats:leftFlagImg="@drawable/ic_mine_my_collection"
            cats:textString="@string/mine_collection" />

        <com.cats.weights.MenuItemView
            android:id="@+id/mineGoods"
            style="@style/MineMenuItemStyle"
            android:layout_marginTop="@dimen/size_20"
            cats:leftFlagImg="@drawable/ic_mine_my_goods"
            cats:textString="@string/mine_goods"
            cats:topDevider="@color/background_bg2" />

        <com.cats.weights.MenuItemView
            android:id="@+id/appSet"
            style="@style/MineMenuItemStyle"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_20"
            cats:leftFlagImg="@drawable/ic_mine_setting"
            cats:textString="@string/app_set"
            cats:topDevider="@color/background_bg2" />
    </LinearLayout>

</ScrollView>